# AntiSIM-v4.0-ABYSS-Edition

./: .gitignore  Dockerfile & docker-compose.yml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
antisim/: config.json  core.py  guard.py  predictor.py  vc_issuer.py  watermark.py
api/: server.py
examples/: demo.py  sample_resume.json
scripts/: generate_keys.py
tests/: test_abyss.py
